--- a/index.css
+++ b/index.css
@@ -12,18 +12,21 @@ body {
 h1 {
     font-size: 64px;
     color: #002442; 
-    text-shadow: 1px 1px 8px #1ea00a, 2px 2px 10px #710b0b; 
+    text-shadow: 1px 1px 8px #07b38d, -2px -1px 10px #710b0b; 
     font-family: 'Viking', serif;
-    letter-spacing: 25px;
+    letter-spacing: 2vw;
     margin-top: 50px;
     margin-bottom: 20px;
+    width:100vw;
+    text-align: center;
+    
 }
 
 /* Frosty Borders */
 h1, h2, p {
-    border-bottom: 3px solid #102a3f; 
+    
     padding-bottom: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 /* Button Styles */
@@ -104,4 +107,59 @@ footer {
     font-family: 'Viking', serif;
     letter-spacing: 3px;
     box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
 }
+
+
+.bar {
+    background-color: #0d3b66;
+    color: #ffffff;
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    font-family: 'Viking', serif;
+    letter-spacing: 3px;
+    box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.5);
+}
+
+#inventory {
+
+    background-color: #0d3b66;
+    color: #ffffff;
+    padding: 10px;
+    position: fixed;
+    width: 100vw;
+    text-align: center;
+    font-family: 'Viking', serif;
+    letter-spacing: 3px;
+    box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.5);
+    top:15.3em;
+    left:0px;
+    
+}
+
+#settlement{
+
+    text-transform: uppercase;
+
+}
+
+#settlers{
+
+position: relative;
+width: 100vw;
+left:0px;
+top:19em;
+}
+
+#playMode{
+
+    position: fixed;
+    width: 100vw;
+    left:0px;
+    top:13em;
+
+}
+
+
