--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ h1 {
     color: #002442; 
     text-shadow: 1px 1px 8px #07b38d, -2px -1px 10px #710b0b; 
     font-family: 'Viking', serif;
-    letter-spacing: 2vw;
+    letter-spacing: 1vw;
     margin-top: 50px;
     margin-bottom: 20px;
-    width:100vw;
     text-align: center;
     
 }
+
 
 /* Frosty Borders */
 h1, h2, p {
@@ -163,4 +163,13 @@ top:19em;
 
 }
 
+legend{
 
+    text-decoration: underline;
+    padding: 4px;
+    margin: 0px;
+    text-align: left;
+    font-size: large;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+}
